<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginScreen"
    android:background="@color/accent"
    android:orientation="vertical"
    android:layout_gravity="center">



        <ImageView
            android:id="@+id/imgview"
            android:layout_alignParentTop="true"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_below="@+id/imgview"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/login_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/userName"
                android:padding="10dp"
                android:textColor="#191919"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>


            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/input_field_divider" />

            <EditText
                android:id="@+id/login_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:hint="@string/userNumber"
                android:padding="10dp"
                android:textColor="#191919"
                android:textSize="16sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>



        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:padding="20dp"
            android:text="@string/login"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:elevation="20dp"
            android:background="@color/primaryDark"/>


</RelativeLayout>